# qvisca-ip

./: .clang-format  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md  camerawindow-thread.cpp  camerawindow.cpp  camerawindow.h  camerawindow.ui  main.cpp
.github/workflows/: build.yaml
cmake/: macos-bundle.plist.in
